# cv_generator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cv_generator/: __init__.py  cleaner.py  format_cv.py  generate_cv.py  get_params.py  make_sections.py  params.py  pipeline.py  schemas.py  select_content.py
data/latex/: base.tex.jinja  classiccv.tex.jinja  content.txt  custom_cmd.txt  moderncv.tex.jinja  modernuscv.tex.jinja  packages.txt
data/template/: activities.jsonl  contact.jsonl  education.jsonl  experiences.jsonl  header.jsonl  languages.jsonl  projects.jsonl  skills.jsonl  summary.jsonl
src/: cleaner.py  format_cv.py  generate_cv.py  get_content.py  get_params.py  make_sections.py  params.py  schemas.py  select_content.py
